--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   max-height: auto;
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr 5fr;
   grid-template-rows: auto 1fr;
 }
 
@@ -104,6 +104,7 @@ li {
 #header {
   background-color: #D8D9DA;
   padding: 20px;
+  box-shadow: 0px 0px 8px rgb(128, 96, 96);
 }
 
 #greeting-label {
@@ -126,21 +127,23 @@ li {
 }
 
 #main-content {
-  background-color: #272829;
+  background-color: #a9b1b900;
   display: grid;
-  grid-template-columns: repeat(3, 200px);
-  gap: 10px;
-  height: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(auto-fill, 200px);
+  /* grid-template-rows: repeat(2, 250px); */
+  gap: 30px;
 }
 
 .card {
-  background-color: rgb(104, 124, 148);
+  background-color: rgb(221, 218, 218);
   padding: 10px;
+  border-radius: 7px;
+  box-shadow: 2px 2px 5px rgb(94, 91, 91);
+  border-left: 5px solid #2984eb;
 }
 
 #main-content-wrapper {
-  display: grid;
-  justify-items: center;
-  padding: 10px;
-  background-color: #272829;
+  padding: 40px;
+  background-color: rgba(21, 71, 17, 0.5);
 }
